--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tufan Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To </h1>
+            <h1><span class="orange-color">Robiul Islam Tufan</span> World</h1>
+            <h3>Build Climber and Train Stopper</h3>
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
+                work.That's why I am learning and mastering web development. I will not stop until I become the Web
+                Development.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/md-robiul-islam-tufan-8a670713b/">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/tufan.png" alt="">
+        </div>
+    </section>
+
 </body>
+
 </html>
