--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexble-container">
         <div class="half-width">
             <h1>Welcome To </h1>
             <h1><span class="orange-color">Robiul Islam Tufan</span> World</h1>
@@ -29,7 +29,7 @@
         </div>
     </section>
 
-    <section class="dream-big">
+    <section class="dream-big flexble-container">
         <div class="half-width">
             <img src="images/tufan.png" alt="">
         </div>
@@ -41,9 +41,31 @@
             <a class="link-button" target="_blank"
                 href="https://www.linkedin.com/in/md-robiul-islam-tufan-8a670713b/">DOWNLOAD RESUME</a>
         </div>
-
-
     </section>
+
+    <section class="experience-area">
+        <h1>Experiences</h1><br>
+        <div class="flexble-container">
+            <div id="full-stack-experience" class="experience-item">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="orange-color">2021-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue
+                    JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div id="web-dev-experience" class="experience-item">
+                <h2>Baby Web Developer</h2>
+                <h3 class="orange-color">2020-2021 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed
+                    it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>© Peter Parker 2023, a Programming Hero initiative.</p>
+    </footer>
 
 </body>
 
