--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
     </section>
     <footer>
-        <p>© Peter Parker 2023, a Programming Hero initiative.</p>
+        <p>© Robiul Islam Tufan 2023, a Programming Hero initiative.</p>
     </footer>
 
 </body>
